# To-Do-List-App

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskwidget.cpp  taskwidget.h
